--- a/pom.xml
+++ b/pom.xml
@@ -4,14 +4,14 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.smartling.keycloak.extras</groupId>
     <artifactId>keycloak-extras-parent</artifactId>
-    <version>0.6.0-SNAPSHOT</version>
+    <version>0.7.0-SNAPSHOT</version>
     <name>Keycloak Spring Security Extras</name>
     <packaging>pom</packaging>
 
     <properties>
-        <spring.version>3.2.6.RELEASE</spring.version>
-        <spring.security.version>3.2.0.RELEASE</spring.security.version>
-        <keycloak.version>1.9.0.Final</keycloak.version>
+        <spring.version>5.1.5.RELEASE</spring.version>
+        <spring.security.version>5.1.4.RELEASE</spring.security.version>
+        <keycloak.version>4.8.3.Final</keycloak.version>
         <powermock.version>1.7.1</powermock.version>
     </properties>
 
@@ -23,13 +23,15 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <groupId>org.slf4j</groupId>
-                <artifactId>slf4j-api</artifactId>
+                <groupId>org.keycloak.bom</groupId>
+                <artifactId>keycloak-adapter-bom</artifactId>
+                <version>${keycloak.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
             </dependency>
             <dependency>
-                <groupId>org.keycloak</groupId>
-                <artifactId>keycloak-spring-security-adapter</artifactId>
-                <version>${keycloak.version}</version>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
             </dependency>
             <dependency>
                 <groupId>javax.servlet</groupId>
@@ -79,15 +81,26 @@
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-databind</artifactId>
-                <version>2.5.3</version>
+                <version>2.9.8</version>
             </dependency>
             <dependency>
                 <groupId>com.smartling.keycloak.extras</groupId>
                 <artifactId>keycloak-spring-security-auth</artifactId>
                 <version>${project.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.springframework.security</groupId>
+                <artifactId>spring-security-core</artifactId>
+                <version>${spring.security.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.security</groupId>
+                <artifactId>spring-security-web</artifactId>
+                <version>${spring.security.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
+
 
     <build>
         <plugins>
